Addresses comments for JSON-LD audit

--- a/lighthouse-cli/test/fixtures/dobetterweb/dbw_tester.html
+++ b/lighthouse-cli/test/fixtures/dobetterweb/dbw_tester.html
@@ -112,7 +112,7 @@
 <!-- even when other forces were responsible for delaying the render. -->
 <script src="./fcp-delayer.js?delay=5000"></script>
 
-<!-- FAIL(json-ld): buttons too close together -->
+<!-- FAIL(json-ld): unknown property in JSON-LD -->
 <script type="application/ld+json">
 {
   "@context": "http://schema.org",
